--- a/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
@@ -17,13 +17,13 @@
 	<bottom>
 		<FlowPane alignment="CENTER" BorderPane.alignment="CENTER">
 			<children>
-				<Button mnemonicParsing="false" onAction="#add" text="Agregar" />
-				<Button fx:id="btnMod" mnemonicParsing="false" onAction="#set" text="Modificar" visible="false">
+				<Button mnemonicParsing="false" onAction="#add" text="%fxml.lbl.add" />
+				<Button fx:id="btnMod" mnemonicParsing="false" onAction="#set" text="%fxml.lbl.modify" visible="false">
 					<FlowPane.margin>
 						<Insets left="10.0" right="10.0" />
 					</FlowPane.margin>
 				</Button>
-				<Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="Eliminar" visible="false" />
+				<Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="%fxml.lbl.delete" visible="false" />
 			</children>
 			<padding>
 				<Insets bottom="5.0" top="5.0" />
@@ -57,19 +57,19 @@
 				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
 					minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="462.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
 					<columns>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="117.0" text="Código Cuenta">
+						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="117.0" text="%fxml.lbl.account_code">
 							<cellValueFactory>
 								<PropertyValueFactory property="codigoCuenta" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="117.0" text="Nombre">
+						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="117.0" text="%fxml.lbl.name">
 							<cellValueFactory>
 								<PropertyValueFactory property="nombre" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="161.0" text="Naturaleza" fx:id="naturaleza"/>
-						<TableColumn text="Tipo Cuenta" fx:id="tipo"/>
-						<TableColumn text="Tipo Plan Contable" fx:id="tipoCuentaContable" />
+						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="161.0" text="%fxml.lbl.naturaleza" fx:id="naturaleza"/>
+						<TableColumn text="%fxml.lbl.account_type" fx:id="tipo"/>
+						<TableColumn text="%fxml.lbl.accounting_plan_type" fx:id="tipoCuentaContable" />
 					</columns>
 					<BorderPane.margin>
 						<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -82,7 +82,7 @@
 		<GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
 			mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER">
 			<children>
-				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Nombre" textAlignment="LEFT" wrapText="true" GridPane.rowIndex="1">
+				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="%fxml.lbl.name" textAlignment="LEFT" wrapText="true" GridPane.rowIndex="1">
 					<GridPane.margin>
 						<Insets bottom="5.0" top="5.0" />
 					</GridPane.margin>
@@ -93,24 +93,30 @@
 					</GridPane.margin>
 				</TextField>
 				<Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text="Listado Tipo Plan Contable" textAlignment="CENTER" GridPane.columnSpan="4">
+					text="%fxml.lbl.list_accounting_plan" textAlignment="CENTER" GridPane.columnSpan="4">
 					<font>
 						<Font name="System Bold Italic" size="18.0" />
 					</font>
 				</Label>
-				<Button mnemonicParsing="false" onAction="#search" text="Buscar" GridPane.columnIndex="2" GridPane.rowIndex="3">
+				<Button mnemonicParsing="false" onAction="#search" text="%fxml.lbl.search" GridPane.columnIndex="2" GridPane.rowIndex="3">
 					<GridPane.margin>
 						<Insets bottom="5.0" left="10.0" top="5.0" />
 					</GridPane.margin>
 				</Button>
-				<Label maxWidth="1.7976931348623157E308" prefHeight="23.0" text="Tipo Cuenta" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+				<Label maxWidth="1.7976931348623157E308" prefHeight="23.0" text="%fxml.lbl.accounting_plan_type" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
 					<GridPane.margin>
 						<Insets bottom="5.0" top="5.0" />
 					</GridPane.margin>
 				</Label>
-				<PopupParametrizedControl fx:id="tipoCuentaContables" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-				<Label maxWidth="1.7976931348623157E308" text="Asociado" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+				<PopupParametrizedControl fx:id="tipoPlanContable" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+				<Label maxWidth="1.7976931348623157E308" text="%fxml.lbl.asociado" GridPane.columnIndex="0" GridPane.rowIndex="2" />
 				<PopupParametrizedControl fx:id="asociado" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+				<Label maxWidth="1.7976931348623157E308" prefHeight="23.0" text="%fxml.lbl.account_type" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets bottom="5.0" top="5.0" />
+					</GridPane.margin>
+				</Label>
+				<PopupParametrizedControl fx:id="tipoCuentaContables" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="2" />
 			</children>
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="129.0" />
