--- a/pyt-contabilidad/pyt-app/src/main/resources/view/guiaIngresos/ingresos.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/guiaIngresos/ingresos.fxml
@@ -66,8 +66,10 @@
 				<Label maxWidth="1.7976931348623157E308" text="Repuesto" GridPane.columnIndex="2" GridPane.rowIndex="7" />
 				<PopupParametrizedControl fx:id="servicio" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 				<PopupParametrizedControl fx:id="repuesto" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="7" />
-				<Button mnemonicParsing="false" onAction="#addServicio" text="Agregar" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-				<Button mnemonicParsing="false" onAction="#addRepuesto" text="Agregar" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+				<Button mnemonicParsing="false" onAction="#addServicio" text="Agregar" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+				<Button mnemonicParsing="false" onAction="#removeServicio" text="Eliminar" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+				<Button mnemonicParsing="false" onAction="#addRepuesto" text="Agregar" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+				<Button mnemonicParsing="false" onAction="#removeRepuesto" text="Eliminar" GridPane.columnIndex="3" GridPane.rowIndex="8" />
 				<TableView fx:id="tablaServicio" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="2"
 					GridPane.rowIndex="9">
 					<columns>
