DBH2 Se realiza ajuste para generalizar elproceso de creacion de filtros dinamicos para ser reusado en otros puntos del codigo

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listaDocumentos.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listaDocumentos.fxml
@@ -40,6 +40,7 @@
 						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 					</rowConstraints>
 				</GridPane>
+				<GridPane fx:id="filterTable"/>
 				<TableView fx:id="tabla" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="312.0" prefWidth="482.0">
 					<columns>
 						<TableColumn prefWidth="150.0" text="Codigo">
