--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listaDocumentos.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listaDocumentos.fxml
@@ -74,6 +74,9 @@
 			<BorderPane.margin>
 				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 			</BorderPane.margin>
+			<children>
+				<Label  fx:id="lblTitle" alignment="CENTER" maxWidth="1.7976931348623157E308" text="" BorderPane.alignment="CENTER"/>
+			</children>
 		</HBox>
 	</top>
 </BorderPane>
