--- a/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/generic_interfaces.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/generic_interfaces.fxml
@@ -1,100 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-	prefWidth="489.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="org.pyt.app.beans.generic.interfaces.GenericInterfacesBean">
-	<bottom>
-		<FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER">
-			<children>
-				<Button mnemonicParsing="false" onAction="#add" text="Guardar" />
-				<Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
-					<FlowPane.margin>
-						<Insets left="10.0" />
-					</FlowPane.margin>
-				</Button>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
-	</bottom>
-	<center>
-		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0"
-			prefWidth="469.0" BorderPane.alignment="CENTER">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="77.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="159.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="67.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="160.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<Label alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="Nombre" />
-				<TextField fx:id="txtName" GridPane.columnIndex="1" />
-				
-				<Label alignment="CENTER" prefHeight="29.0" prefWidth="70.0" text="Descripcion" textAlignment="CENTER" GridPane.columnIndex="2" />
-				<TextField fx:id="txtDescription" GridPane.columnIndex="3" />
-				
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Alias" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-				<TextField fx:id="txtAlias" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-				
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Clase DTO" GridPane.rowIndex="1" GridPane.columnIndex="2"/>
-				<TextField fx:id="txtClassDto" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-				
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Clase Bean" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-				<TextField fx:id="txtClassBean"  GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-				
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="#Carateres" GridPane.rowIndex="2" GridPane.columnIndex="2"/>
-				<TextField fx:id="txtWidth"  GridPane.rowIndex="2" GridPane.columnIndex="3"/>
-				
-				<CheckBox fx:id="chkIsFilter" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#isFilter" text="Es Filtro" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.margin="$x1" GridPane.rowIndex="3" />
-				
-				<CheckBox fx:id="chkIsColumn" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#isColumn" text="Es Columna" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.margin="$x1" GridPane.rowIndex="3" />
-				
-				<CheckBox fx:id="chkIsRequired" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#isRequired" text="Es Requerido" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.margin="$x1" GridPane.rowIndex="4" />
-				
-				<Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Estado" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="4" />
-	            <ChoiceBox fx:id="chbState" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-				
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-			</BorderPane.margin>
-			<padding>
-				<Insets bottom="10.0" />
-			</padding>
-		</GridPane>
-	</center>
-	<cursor>
-		<Cursor fx:constant="DEFAULT" />
-	</cursor>
-	<top>
-		<FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-			<children>
-				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text="Empresa" textAlignment="CENTER">
-					<font>
-						<Font name="System Bold Italic" size="18.0" />
-					</font>
-				</Label>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
-	</top>
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.generic.interfaces.GenericInterfacesBean">
+  <bottom>
+    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="29.0" prefWidth="489.0" BorderPane.alignment="CENTER">
+      <children>
+        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#add" text="Guardar" />
+        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="Cancelar">
+          <FlowPane.margin>
+            <Insets left="10.0" />
+          </FlowPane.margin>
+        </Button>
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </FlowPane>
+  </bottom>
+  <center>
+    <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="258.0" prefWidth="513.0" vgap="5.0" BorderPane.alignment="CENTER">
+      <children>
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="88.0" text="%fxml.lbl.name" />
+        <TextField fx:id="txtName" GridPane.columnIndex="1" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="70.0" text="%fxml.lbl.description" textAlignment="CENTER" GridPane.columnIndex="2" />
+        <TextField fx:id="txtDescription" GridPane.columnIndex="3" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="%fxml.lbl.alias" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="txtAlias" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="%fxml.lbl.dto.class" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+        <TextField fx:id="txtClassDto" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="%fxml.lbl.bean.class" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <TextField fx:id="txtClassBean" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="%fxml.lbl.character.number" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <TextField fx:id="txtWidth" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+        <CheckBox fx:id="chkIsFilter" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%fxml.lbl.is.filter" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+        <CheckBox fx:id="chkIsColumn" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%fxml.lbl.is.column" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+        <CheckBox fx:id="chkIsRequired" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%fxml.lbl.is.required" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.state" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <ChoiceBox fx:id="chbState" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+      </children>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="10.0" prefWidth="110.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="131.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.0" minWidth="10.0" prefWidth="123.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="134.0" />
+      </columnConstraints>
+      <padding>
+        <Insets bottom="10.0" />
+      </padding>
+      <rowConstraints>
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="37.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <BorderPane.margin>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      </BorderPane.margin>
+    </GridPane>
+  </center>
+  <padding>
+    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+  </padding>
+  <top>
+    <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <children>
+        <Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.generic.interfaces" textAlignment="CENTER">
+          <font>
+            <Font name="System Bold Italic" size="18.0" />
+          </font>
+        </Label>
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </FlowPane>
+  </top>
 </BorderPane>
