--- a/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/list_generic_interfaces.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/list_generic_interfaces.fxml
@@ -13,13 +13,18 @@
   <bottom>
     <FlowPane alignment="CENTER" BorderPane.alignment="CENTER">
       <children>
-        <Button mnemonicParsing="false" onAction="#add" text="Agregar" />
-        <Button fx:id="btnMod" mnemonicParsing="false" onAction="#set" text="Modificar" visible="false">
+        <Button mnemonicParsing="false" onAction="#add" text="%fxml.form.button.add" />
+        <Button mnemonicParsing="false" onAction="#copy" text="%fxml.form.button.copy" >
+         <FlowPane.margin>
+            <Insets left="10.0" right="10.0" />
+          </FlowPane.margin>
+        </Button>
+        <Button fx:id="btnMod" mnemonicParsing="false" onAction="#set" text="%fxml.form.button.edit" visible="false">
           <FlowPane.margin>
             <Insets left="10.0" right="10.0" />
           </FlowPane.margin>
         </Button>
-        <Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="Eliminar" visible="false" />
+        <Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="%fxml.form.button.delete" visible="false" />
       </children>
       <padding>
         <Insets bottom="5.0" top="5.0" />
@@ -32,7 +37,7 @@
         <HBox fx:id="paginador" alignment="CENTER" maxWidth="-1.0" prefHeight="40.0" prefWidth="400.0" />
       </bottom>
       <center>
-        <TableView fx:id="tableGeneric" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
+        <TableView fx:id="tableGeneric" onMouseClicked="#clickTable" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
           <BorderPane.margin>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
           </BorderPane.margin>
