--- a/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/generic_interfaces.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/generic_interfaces.fxml
@@ -18,6 +18,16 @@
             <Insets left="10.0" />
           </FlowPane.margin>
         </Button>
+        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#newRow" text="%fxml.form.button.new">
+          <FlowPane.margin>
+            <Insets left="10.0" />
+          </FlowPane.margin>
+        </Button>
+        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#copy" text="%fxml.form.button.copy">
+          <FlowPane.margin>
+            <Insets left="10.0" />
+          </FlowPane.margin>
+        </Button>
       </children>
       <BorderPane.margin>
         <Insets bottom="5.0" top="5.0" />
