DBH2 se crean los desarrollos para las tareas faltantes de menus,ayudas,grupos,permisos,usuarios.

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/help/help.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/help/help.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.menu.MenuBean">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.help.HelpBean">
   <bottom>
     <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="29.0" prefWidth="489.0" BorderPane.alignment="CENTER">
       <children>
@@ -33,7 +33,7 @@
   <top>
     <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
       <children>
-        <Label fx:id="lblTitle" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.menus" textAlignment="CENTER">
+        <Label fx:id="lblTitle" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.help" textAlignment="CENTER">
           <font>
             <Font name="System Bold Italic" size="18.0" />
           </font>
