--- a/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
@@ -1,81 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.*?>
 
-<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-	prefWidth="200.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="org.pyt.app.beans.users.LoginBean">
-	<bottom>
-		<FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-			<children>
-				<Button mnemonicParsing="false" onAction="#connect" text="%fxml.form.button.connect" />
-				<Button mnemonicParsing="false" onAction="#clearAll" text="%fxml.form.button.clear.all" >
-					<FlowPane.margin>
-						<Insets left="10.0" />
-					</FlowPane.margin>
-				</Button>
-				<Button mnemonicParsing="false" onAction="#cancel" text="%fxml.form.button.cancel"/>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
-	</bottom>
-	<center>
-		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0"
-			prefWidth="200.0" BorderPane.alignment="CENTER">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="77.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="159.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<Label alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.user" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-				<TextField fx:id="user" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-				
-				<Label alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.password" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-				<PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-				
-				<Label alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.remember" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-				<CheckBox fx:id="remember" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-				
-				<Label fx:id="message"  alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-				
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-			</BorderPane.margin>
-			<padding>
-				<Insets bottom="10.0" />
-			</padding>
-		</GridPane>
-	</center>
-	<cursor>
-		<Cursor fx:constant="DEFAULT" />
-	</cursor>
-	<top>
-		<FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-			<children>
-				<Label fx:id="title" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text="Login" textAlignment="CENTER">
-					<font>
-						<Font name="System Bold Italic" size="18.0" />
-					</font>
-				</Label>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
-	</top>
+<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="235.99997792968497" prefWidth="272.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.users.LoginBean">
+  <bottom>
+    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="33.0" prefWidth="272.0" BorderPane.alignment="CENTER">
+      <children>
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#connect" text="%fxml.form.button.connect" />
+        <Button mnemonicParsing="false" onAction="#clearAll" text="%fxml.form.button.clear.all">
+          <FlowPane.margin>
+            <Insets left="10.0" right="10.0" />
+          </FlowPane.margin>
+        </Button>
+        <Button mnemonicParsing="false" onAction="#cancel" text="%fxml.form.button.cancel" />
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </FlowPane>
+  </bottom>
+  <center>
+    <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="150.0" prefWidth="200.0" vgap="5.0" BorderPane.alignment="CENTER">
+      <children>
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.user" GridPane.columnIndex="0" GridPane.rowIndex="0">
+          <labelFor>
+            <TextField fx:id="user" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+          </labelFor>
+        </Label>
+        <fx:reference source="user" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.password" GridPane.columnIndex="0" GridPane.rowIndex="1">
+          <labelFor>
+            <PasswordField fx:id="password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+          </labelFor>
+        </Label>
+        <fx:reference source="password" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.remember" GridPane.columnIndex="0" GridPane.rowIndex="2">
+          <labelFor>
+            <CheckBox fx:id="remember" maxHeight="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+          </labelFor>
+        </Label>
+        <fx:reference source="remember" />
+        <Label fx:id="message" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="88.0" text="" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+      </children>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="77.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="159.0" />
+      </columnConstraints>
+      <padding>
+        <Insets bottom="10.0" />
+      </padding>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <BorderPane.margin>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      </BorderPane.margin>
+    </GridPane>
+  </center>
+  <top>
+    <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <children>
+        <Label fx:id="title" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Login" textAlignment="CENTER">
+          <font>
+            <Font name="System Bold Italic" size="18.0" />
+          </font>
+        </Label>
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </FlowPane>
+  </top>
 </BorderPane>
