DBH3 Se realiza ajsute de la aplicacion de login

--- a/pyt-contabilidad/pyt-app/src/main/resources/styles/principal.css
+++ b/pyt-contabilidad/pyt-app/src/main/resources/styles/principal.css
@@ -15,3 +15,17 @@
 	-fx-margin:20;
 	-fx-padding:20;
 }
+.tooltip-error{
+ -fx-background-color:red;
+ -fx-color:white;
+}
+.field-error{
+  -fx-border-color:red;
+}
+.field-ok{
+  -fx-border-color:green;
+}
+.message-error{
+  -fx-background-color:red;
+  -fx-color:white;
+}
