--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/formulario.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/formulario.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefWidth="258.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
-	fx:controller="org.pyt.app.beans.dinamico.DocumentoBean">
+<BorderPane maxWidth="1.7976931348623157E308" prefWidth="258.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
+	fx:controller="org.pyt.app.beans.dinamico.DocumentoBean" style="-fx-border-color:orange;-fx-border-width:1;">
 	<!-- TODO Add Nodes -->
 	<bottom>
 		<HBox alignment="CENTER" prefHeight="26.0" prefWidth="200.0">
@@ -39,7 +39,7 @@
 					</VBox.margin>
 				</HBox>
 				<VBox fx:id="central" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0"
-					VBox.vgrow="SOMETIMES" />
+					VBox.vgrow="SOMETIMES"   />
 			</children>
 		</VBox>
 	</center>
