--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listDetalleContable.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listDetalleContable.fxml
@@ -68,7 +68,7 @@
     </VBox>
   </center>
   <top>
-    <GridPane alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.margin="$x1">
+    <GridPane fx:id="filterTable" alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.margin="$x1">
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
