--- a/pyt-contabilidad/pyt-app/src/main/resources/view/languages/languages.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/languages/languages.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.languages.LanguageBean">
+<BorderPane fx:id="panel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.languages.LanguageBean">
   <bottom>
     <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="29.0" prefWidth="489.0" BorderPane.alignment="CENTER">
       <children>
-        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#add" text="%fxml.form.button.add" />
+        <Button fx:id="btnSave" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#add" text="%fxml.form.button.add" />
         <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="%fxml.form.button.cancel">
           <FlowPane.margin>
             <Insets left="10.0" />
           </FlowPane.margin>
         </Button>
-        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#newRow" text="%fxml.form.button.new">
+        <Button fx:id="btnNew" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#newRow" text="%fxml.form.button.new">
           <FlowPane.margin>
             <Insets left="10.0" />
           </FlowPane.margin>
