--- a/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/generic_interfaces.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/genericInterfaces/generic_interfaces.fxml
@@ -62,7 +62,7 @@
         <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.order" GridPane.columnIndex="0" GridPane.rowIndex="6" />
         <Label fx:id="lbField" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.field" GridPane.columnIndex="0" GridPane.rowIndex="7" />
         <ChoiceBox fx:id="cbField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="7" />
-        <Label  fx:id="lbGroup" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.group" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+        <Label fx:id="lbGroup" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.group" GridPane.columnIndex="2" GridPane.rowIndex="7" />
         <ChoiceBox fx:id="cbGroup" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="7">
           <GridPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" fx:id="x1" />
@@ -74,8 +74,13 @@
           </GridPane.margin>
         </CheckBox>
         <Label fx:id="lbDefault" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.default" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-        <TextField id="txtOrder" fx:id="tbDefault" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.margin="$x1" GridPane.rowIndex="6" />
+        <TextField id="txtOrder" fx:id="tbDefault" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="6">
+          <GridPane.margin>
+            <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" fx:id="x1" />
+          </GridPane.margin>
+        </TextField>
         <CheckBox fx:id="chkDefault" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%fxml.lbl.is.default" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+        <ChoiceBox fx:id="cbName" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="10.0" prefWidth="110.0" />
