load i18n lack Se realiza ajuste del codigo para el funcionamiento con menus, permisos y grupos y se deja acoplado con el login para que solo muestre los menus a los cuales se tienen permisos.

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/menu_permission_user/menu_permission_user.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/menu_permission_user/menu_permission_user.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.menu.permision.user.MenuPermissionUserBean">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="533.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.menu.permission.user.MenuPermissionUserBean">
   <bottom>
     <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="29.0" prefWidth="489.0" BorderPane.alignment="CENTER">
       <children>
