--- a/pyt-contabilidad/pyt-app/src/main/resources/styles/principal.css
+++ b/pyt-contabilidad/pyt-app/src/main/resources/styles/principal.css
@@ -22,6 +22,9 @@
 .field-error{
   -fx-border-color:red;
 }
+.field-warn{
+  -fx-border-color:orange;
+}
 .field-ok{
   -fx-border-color:green;
 }
@@ -29,6 +32,7 @@
   -fx-background-color:red;
   -fx-color:white;
 }
+
 .message-warn{
   -fx-background-color:orange;
   -fx-color:white;
