--- a/pyt-contabilidad/pyt-app/src/main/resources/view/parametroInventarios/ListParametrosInventarios.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/parametroInventarios/ListParametrosInventarios.fxml
@@ -9,19 +9,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="567.0"
-	style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
-	fx:controller="org.pyt.app.beans.parametroInventario.ParametrosInventariosBean">
+<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="567.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.parametroInventario.ParametrosInventariosBean">
 	<bottom>
-		<HBox alignment="CENTER" depthTest="INHERIT" prefHeight="30.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+		<HBox alignment="CENTER" depthTest="INHERIT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="200.0" BorderPane.alignment="CENTER">
 			<children>
-				<Button fx:id="add" mnemonicParsing="false" onAction="#createBtn" text="Agregar" textAlignment="CENTER" />
-				<Button fx:id="modify" mnemonicParsing="false" onAction="#modifyBtn" text="Editar" textAlignment="CENTER">
+				<Button fx:id="add" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createBtn" text="Agregar" textAlignment="CENTER" />
+				<Button fx:id="modify" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#modifyBtn" text="Editar" textAlignment="CENTER">
 					<HBox.margin>
 						<Insets left="10.0" right="10.0" />
 					</HBox.margin>
 				</Button>
-				<Button fx:id="del" mnemonicParsing="false" onAction="#deleteBtn" text="Eliminar" textAlignment="CENTER" />
+				<Button fx:id="del" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#deleteBtn" text="Eliminar" textAlignment="CENTER" />
 			</children>
 		</HBox>
 	</bottom>
@@ -47,8 +45,7 @@
 				</GridPane>
 			</bottom>
 			<center>
-				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-					minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="383.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
+				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTable" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
 					<columns>
 						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="100.0" text="Nombre">
 							<cellValueFactory>
@@ -73,6 +70,35 @@
 					</columns>
 				</TableView>
 			</center>
+         <top>
+      		<GridPane alignment="CENTER" cache="false" depthTest="INHERIT" hgap="5.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="-1.0" vgap="5.0" BorderPane.alignment="CENTER">
+      			<children>
+      				<Label text="Nombre" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+      				<Label text="Descripcion" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+      				<Label text="Estado" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+      				<Label text="Grupo" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+      				<TextField fx:id="nombre" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+      				<TextField fx:id="descripcion" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+      				<ChoiceBox fx:id="estado" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      				<ChoiceBox fx:id="grupo" maxWidth="1.7976931348623157E308" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+      				<Button mnemonicParsing="false" onAction="#searchBtn" text="Buscar" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      			</children>
+      			<columnConstraints>
+      				<ColumnConstraints hgrow="SOMETIMES" maxWidth="99.0" minWidth="10.0" prefWidth="61.0" />
+      				<ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="139.0" />
+      				<ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="86.0" />
+      				<ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="114.0" />
+      			</columnConstraints>
+      			<rowConstraints>
+      				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      			</rowConstraints>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+      		</GridPane>
+         </top>
 		</BorderPane>
 	</center>
 	<left>
@@ -106,32 +132,7 @@
 			</children>
 		</VBox>
 	</left>
-	<top>
-		<GridPane alignment="CENTER" cache="false" depthTest="INHERIT" hgap="5.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
-			minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="-1.0" vgap="5.0" BorderPane.alignment="CENTER">
-			<children>
-				<Label text="Nombre" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-				<Label text="Descripcion" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-				<Label text="Estado" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-				<Label text="Grupo" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-				<TextField fx:id="nombre" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-				<TextField fx:id="descripcion" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-				<ChoiceBox fx:id="estado" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-				<ChoiceBox fx:id="grupo" maxWidth="1.7976931348623157E308" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-				<Button mnemonicParsing="false" onAction="#searchBtn" text="Buscar" GridPane.columnIndex="2" GridPane.halignment="CENTER"
-					GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-			</children>
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="99.0" minWidth="10.0" prefWidth="61.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="139.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="86.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="114.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-		</GridPane>
-	</top>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
 </BorderPane>
