--- a/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
@@ -8,25 +8,25 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="235.99997792968497" prefWidth="272.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.users.LoginBean">
+<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="207.99997792968497" prefWidth="272.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.users.LoginBean">
   <bottom>
-    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="33.0" prefWidth="272.0" BorderPane.alignment="CENTER">
+    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="CENTER">
       <children>
         <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#connect" text="%fxml.form.button.connect" />
-        <Button mnemonicParsing="false" onAction="#clearAll" text="%fxml.form.button.clear.all">
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clearAll" text="%fxml.form.button.clear.all">
           <FlowPane.margin>
             <Insets left="10.0" right="10.0" />
           </FlowPane.margin>
         </Button>
-        <Button mnemonicParsing="false" onAction="#cancel" text="%fxml.form.button.cancel" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="%fxml.form.button.cancel" />
       </children>
       <BorderPane.margin>
-        <Insets bottom="5.0" top="5.0" />
+        <Insets bottom="10.0" />
       </BorderPane.margin>
     </FlowPane>
   </bottom>
   <center>
-    <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="150.0" prefWidth="200.0" vgap="5.0" BorderPane.alignment="CENTER">
+    <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" vgap="5.0" BorderPane.alignment="CENTER">
       <children>
         <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="88.0" text="%fxml.form.lbl.user" GridPane.columnIndex="0" GridPane.rowIndex="0">
           <labelFor>
@@ -53,15 +53,16 @@
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="159.0" />
       </columnConstraints>
       <padding>
-        <Insets bottom="10.0" />
+        <Insets />
       </padding>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="34.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="26.0" prefHeight="15.0" />
       </rowConstraints>
       <BorderPane.margin>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+        <Insets left="10.0" right="10.0" top="10.0" />
       </BorderPane.margin>
     </GridPane>
   </center>
